fix issue with fullname text not centered in profile-detailed-info

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -100,6 +100,10 @@
   font-size: 2.1rem;
 }
 
+.profile-info-fullname {
+  line-height: normal;
+}
+
 .profile-info-fullname,
 .user-stats-total {
   font-size: 1.3rem;
