--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -46,9 +46,11 @@ div.actions {
   margin-bottom: 10px;
 }
 
-#notice {
-  color: $header-gray;
-}
+// #notice {
+//   color: $header-gray;
+//   width: 100%;
+//   border: 1px solid $header-gray;
+// }
 
 .field_with_errors {
   padding: 2px;
